# nf-tui

./: Cargo.toml  LICENSE  README.md  nftui.toml
src/: lib.rs  parser.rs  rules.rs
